# pull-stream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: common.h  declarations.h  duplex.h  end_or_error.h  pull-stream.h  sink.h  source.h  state.h  through.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  basic-test.cpp  chain-test.cpp  duplex-test.cpp  end_or_error_test.cpp  state-test.cpp
